--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,8 +56,10 @@ const allPostsData = posts.map((post) => {
       <span class="word">Tyler</span>
     </h1>
     <p class="animated-subtitle slide-in-block">
-      I'm a software engineer with a passion for building things.<br />
-      I'm currently studying machine learning and systems at Georgia Tech. My research interests include: Mechanistic Interpretability, AI Alignment, Deep Learning Theory
+      I'm a research engineer focused on interpretability and ML infrastructure.<br />
+      Currently finishing my MSCS at Georgia Tech (ML & Computing Systems) while doing alignment research with SPAR and MARS. Previously a Senior SWE & Team Lead for 7 years. My work spans mechanistic interpretability, GPU systems, and building the tooling that makes safety research possible at scale.
+      <br />
+
     </p>
   </section>
   <section class="posts slide-in-block" data-pagefind-ignore>
